yamls/gitlab/ingress_release-name-minio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: RELEASE-NAME-issuer
    kubernetes.io/ingress.class: RELEASE-NAME-nginx
    kubernetes.io/ingress.provider: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
  labels:
    app: minio
    chart: minio-0.4.3
    heritage: Helm
    release: RELEASE-NAME
  name: RELEASE-NAME-minio
  namespace: default
spec:
  rules:
  - host: minio.example.com
    http:
      paths:
      - backend:
          serviceName: RELEASE-NAME-minio-svc
          servicePort: 9000
        path: /
  tls:
  - hosts:
    - minio.example.com
    secretName: RELEASE-NAME-minio-tls
